--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <h1>
-this is tutoria; for git
+this is tutorial for git
 </h1>
+<p>
+this is paragraph lorem ipsum lauda lassan
+</p>
 </html>
